--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.GrandpaCaller">
+        android:supportsRtl="true">
         <activity
             android:name=".contacts.edit.EdtActivity"
-            android:exported="false"
-            android:label="@string/title_activity_edt_contact"
-            android:theme="@style/Theme.GrandpaCaller" />
+            android:exported="false" />
         <activity
             android:name=".calling.CallActivity"
             android:exported="true"
@@ -44,8 +41,7 @@
         </activity>
         <activity
             android:name=".SplashActivity"
-            android:exported="true"
-            android:theme="@style/Theme.GrandpaCaller">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
